# Huffman-Encoding

./: compress.txt  compressRef.txt  create_submission_zip.sh  extra-credit-compress.executable  extra-credit-uncompress.executable  harryPotter.txt  meson.build
.devcontainer/: devcontainer.json  docker-compose.yml
build_scripts/: build_reference_solution.sh
data/: check2.txt
src/: .compress.cpp.swn  .nfs00000000011dabfc00000ae5  .uncompress.cpp.swp  FileUtils.hpp  compress.cpp  meson.build  uncompress.cpp
src/bitStream/: .meson.build.swp  meson.build
src/bitStream/input/: .BitInputStream.cpp.swo  .meson.build.swp  BitInputStream.cpp  BitInputStream.hpp  meson.build
src/bitStream/output/: .BitOutputStream.cpp.swo  .meson.build.swp  BitOutputStream.cpp  BitOutputStream.hpp  meson.build
src/encoder/: .HCTree.cpp.swo  .HCTree.hpp.swp  .meson.build.swp  .nfs00000000022cb26300000ae4  HCNode.hpp  HCTree.cpp  HCTree.hpp  meson.build
test/: meson.build  test_BitInputStream.cpp  test_BitOutputStream.cpp  test_HCTree.cpp
